--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "author": "Favour Okunowo",
   "devDependencies": {
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.4",
     "tailwindcss": "^3.0.14"
   }
 }
