--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,31 @@
 {
   "name": "Apple",
   "short_name": "Apple",
-  "start_url": "index.html",
+  "description": "An Apple website clone/redesign",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "description": "An Apple website clone/redesign",
   "theme_color": "#000000",
-  "dir": "ltr",
   "orientation": "portrait-primary",
   "scope": "/",
   "categories": [],
   "screenshots": [],
   "icons": [{
-    "src": "assets/logo.svg",
-    "type": "image/x-icon"
+    "src": "./assets/icons/icon-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }, {
+    "src": "./assets/icons/icon-256x256.png",
+    "sizes": "256x256",
+    "type": "image/png"
+  }, {
+    "src": "./assets/icons/icon-384x384.png",
+    "sizes": "384x384",
+    "type": "image/png"
+  }, {
+    "src": "./assets/icons/icon-512x512.png",
+    "sizes": "512x512",
+    "type": "image/png"
   }],
   "shortcuts": []
 }
